--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
   ],
   "dependencies": {
     "bootstrap-css": "^3.3.6",
-    "angular": "^1.5.7"
+    "angular": "^1.5.7",
+    "jquery": "^3.1.0",
+    "bootstrap-star-rating": "^4.0.1"
   }
 }
