--- a/package.json
+++ b/package.json
@@ -28,18 +28,21 @@
     "gulp-server-livereload": "^1.8.1",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.8",
-    "jade": "^1.11.0",
+    "history": "^3.0.0",
     "mongoose": "^4.5.5",
     "node-jsx": "^0.13.3",
     "node-notifier": "^4.6.0",
     "react": "^15.2.1",
-    "reactify": "^1.1.1",
     "react-dom": "^15.2.1",
+    "react-router": "^2.6.0",
+    "reactify": "^1.1.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "gulp-nodemon": "^2.1.0",
     "nodemon": "^1.9.2"
   }
 }
