--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
     "reactify": "^1.1.1",
+    "reflux": "^0.4.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
